--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Tipo Zorinos</title>
+    <title>KyntraOS</title>
     <style>
         /* RESET BÁSICO */
         * {
@@ -128,43 +128,43 @@
 
     <!-- HEADER -->
     <header>
-        <h1>MiOS</h1>
+        <h1>KyntraOS</h1>
         <nav>
-            <a href="#features">Características</a>
-            <a href="#download">Descargar</a>
-            <a href="#contact">Contacto</a>
+            <a href="#features">Features</a>
+            <a href="#download">Downloads</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
     <!-- HERO -->
     <div class="hero">
-        <h2>Haz tu computadora mejor</h2>
-        <p>Una alternativa rápida y segura para tu sistema operativo actual.</p>
-        <button>Descargar Ahora</button>
+        <h2>Hey you, yes you, you have a very bad computer? Download KyntraOS</h2>
+        <p>One of the most optimized systems of the world</p>
+        <button>Download Now</button>
     </div>
 
     <!-- SECCIÓN DE CARACTERÍSTICAS -->
     <section id="features">
-        <h2>Características Principales</h2>
+        <h2>Principal Features</h2>
         <div class="features">
             <div class="feature">
-                <h3>Fácil de Usar</h3>
-                <p>Interfaz intuitiva y familiar, lista para usar desde el primer momento.</p>
+                <h3>Fast installation</h3>
+                <p>The instalation takes less than 3 minutes.</p>
             </div>
             <div class="feature">
-                <h3>Rápido y Ligero</h3>
-                <p>Optimizado para rendimiento, incluso en equipos antiguos.</p>
+                <h3>Very Efficient</h3>
+                <p>Optimized for gaming and very low consume RAM</p>
             </div>
             <div class="feature">
-                <h3>Seguro</h3>
-                <p>Protege tus datos y tu privacidad con actualizaciones constantes.</p>
+                <h3>Based In Arch</h3>
+                <p>Arch linux is an Ultra Optimized system very customizable</p>
             </div>
         </div>
     </section>
 
     <!-- FOOTER -->
     <footer id="contact">
-        <p>© 2026 MiOS. Todos los derechos reservados. | <a href="#">Contacto</a></p>
+        <p>© 2026 KyntraOS.License GPLv2. | <a href="#">Contact</a><p>greatmacaw@proton.me</p>
     </footer>
 
 </body>
