--- a/index.html
+++ b/index.html
@@ -3,169 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KyntraOS</title>
+    <title>TuDistro | Velocidad Pura</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <style>
-        /* RESET BÁSICO */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            color: #333;
-        }
-
-        /* HEADER */
-        header {
-            background-color: #0d6efd;
+            font-family: 'Inter', sans-serif;
+            background: radial-gradient(circle at top right, #1a1a2e, #0f0f0f);
             color: white;
-            padding: 15px 30px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            overflow-x: hidden;
         }
 
-        header h1 {
-            font-size: 1.5rem;
+        .glass {
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 24px;
         }
 
-        nav a {
-            color: white;
-            margin-left: 20px;
-            text-decoration: none;
-            font-weight: bold;
+        .gradient-text {
+            background: linear-gradient(90deg, #4facfe 0%, #00f2fe 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        /* HERO */
-        .hero {
-            text-align: center;
-            padding: 80px 20px;
-            background: linear-gradient(to right, #0d6efd, #6610f2);
-            color: white;
-        }
-
-        .hero h2 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-
-        .hero p {
-            font-size: 1.2rem;
-            margin-bottom: 30px;
-        }
-
-        .hero button {
-            background-color: #ffc107;
-            border: none;
-            padding: 15px 30px;
-            font-size: 1rem;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-
-        .hero button:hover {
-            background-color: #e0a800;
-        }
-
-        /* SECCIONES */
-        section {
-            padding: 60px 20px;
-            text-align: center;
-        }
-
-        .features {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 40px;
-        }
-
-        .feature {
-            background-color: white;
-            padding: 30px;
-            border-radius: 10px;
-            width: 250px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
-        }
-
-        .feature:hover {
-            transform: translateY(-10px);
-        }
-
-        .feature h3 {
-            margin-bottom: 15px;
-            color: #0d6efd;
-        }
-
-        /* FOOTER */
-        footer {
-            background-color: #343a40;
-            color: white;
-            padding: 30px 20px;
-            text-align: center;
-        }
-
-        footer a {
-            color: #ffc107;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
+        .blob {
+            position: absolute;
+            width: 500px;
+            height: 500px;
+            background: linear-gradient(180deg, rgba(79, 172, 254, 0.15) 0%, rgba(0, 242, 254, 0) 100%);
+            filter: blur(80px);
+            z-index: -1;
+            border-radius: 50%;
         }
     </style>
 </head>
-<body>
+<body class="min-h-screen">
 
-    <!-- HEADER -->
-    <header>
-        <h1>KyntraOS</h1>
-        <nav>
-            <a href="#features">Features</a>
-            <a href="#download">Downloads</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
+    <div class="blob top-[-10%] right-[-10%]"></div>
+    <div class="blob bottom-[-10%] left-[-10%]"></div>
 
-    <!-- HERO -->
-    <div class="hero">
-        <h2>Hey you, yes you, you have a very bad computer? Download KyntraOS</h2>
-        <p>One of the most optimized systems of the world</p>
-        <button>Download Now</button>
-    </div>
+    <nav class="flex justify-between items-center px-10 py-6 max-w-7xl mx-auto">
+        <div class="text-2xl font-bold tracking-tighter">TU<span class="gradient-text">DISTRO</span></div>
+        <div class="space-x-8 text-sm font-medium text-gray-400">
+            <a href="#" class="hover:text-white transition">Inicio</a>
+            <a href="#" class="hover:text-white transition">Características</a>
+            <a href="#" class="hover:text-white transition">Documentación</a>
+            <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded-full hover:bg-blue-500 transition">Descargar</a>
+        </div>
+    </nav>
 
-    <!-- SECCIÓN DE CARACTERÍSTICAS -->
-    <section id="features">
-        <h2>Principal Features</h2>
-        <div class="features">
-            <div class="feature">
-                <h3>Fast installation</h3>
-                <p>The instalation takes less than 3 minutes.</p>
+    <main class="max-w-7xl mx-auto px-10 pt-20 pb-32 text-center">
+        <h1 class="text-6xl md:text-8xl font-extrabold mb-6 tracking-tight">
+            Diseñada para el <br> <span class="gradient-text">Máximo Rendimiento</span>
+        </h1>
+        <p class="text-gray-400 text-xl max-w-2xl mx-auto mb-10">
+            Elimina el bloatware, reduce la latencia y toma el control total de tu hardware con una base optimizada para gaming y productividad.
+        </p>
+        
+        <div class="flex justify-center gap-4">
+            <button class="bg-white text-black font-bold py-4 px-10 rounded-2xl hover:scale-105 transition-transform">
+                Obtener TuDistro
+            </button>
+            <button class="glass py-4 px-10 rounded-2xl hover:bg-white/10 transition">
+                Ver el Código
+            </button>
+        </div>
+
+        <div class="mt-20 glass p-4 rotate-x-12 transform perspective-1000 shadow-2xl">
+             <div class="rounded-xl overflow-hidden bg-[#0a0a0a] aspect-video flex items-center justify-center border border-white/5">
+                 <span class="text-gray-600 italic">[ Aquí iría un screenshot o video de tu UI ]</span>
+             </div>
+        </div>
+    </main>
+
+    <section class="max-w-7xl mx-auto px-10 grid grid-cols-1 md:grid-cols-3 gap-8 pb-40">
+        <div class="glass p-8">
+            <div class="w-12 h-12 bg-blue-500/20 rounded-lg mb-6 flex items-center justify-center">
+                <svg class="w-6 h-6 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M13 10V3L4 14h7v7l9-11h-7z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
             </div>
-            <div class="feature">
-                <h3>Very Efficient</h3>
-                <p>Optimized for gaming and very low consume RAM</p>
+            <h3 class="text-xl font-bold mb-3">Latencia Cero</h3>
+            <p class="text-gray-400">Optimización del kernel para una respuesta inmediata en entornos competitivos.</p>
+        </div>
+
+        <div class="glass p-8">
+            <div class="w-12 h-12 bg-purple-500/20 rounded-lg mb-6 flex items-center justify-center">
+                <svg class="w-6 h-6 text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
             </div>
-            <div class="feature">
-                <h3>Based In Arch</h3>
-                <p>Arch linux is an Ultra Optimized system very customizable</p>
+            <h3 class="text-xl font-bold mb-3">Privacidad Total</h3>
+            <p class="text-gray-400">Sin telemetría, sin rastreadores. Tus datos permanecen en tu máquina.</p>
+        </div>
+
+        <div class="glass p-8">
+            <div class="w-12 h-12 bg-green-500/20 rounded-lg mb-6 flex items-center justify-center">
+                <svg class="w-6 h-6 text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4m0 5c0 2.21-3.582 4-8 4s-8-1.79-8-4" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
             </div>
+            <h3 class="text-xl font-bold mb-3">Open Source</h3>
+            <p class="text-gray-400">Transparencia completa. Auditable y mantenido por la comunidad.</p>
         </div>
     </section>
-
-    <!-- FOOTER -->
-    <footer id="contact">
-        <p>© 2026 KyntraOS.License GPLv2. | <a href="#">Contact</a><p>greatmacaw@proton.me</p>
-    </footer>
 
 </body>
 </html>
