--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TuDistro | Velocidad Pura</title>
+    <title>KyntraOs Here!</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
     <style>
@@ -44,12 +44,12 @@
     <div class="blob bottom-[-10%] left-[-10%]"></div>
 
     <nav class="flex justify-between items-center px-10 py-6 max-w-7xl mx-auto">
-        <div class="text-2xl font-bold tracking-tighter">TU<span class="gradient-text">DISTRO</span></div>
+        <div class="text-2xl font-bold tracking-tighter">Ky<span class="gradient-text">ntraOS</span></div>
         <div class="space-x-8 text-sm font-medium text-gray-400">
             <a href="#" class="hover:text-white transition">Inicio</a>
-            <a href="#" class="hover:text-white transition">Características</a>
-            <a href="#" class="hover:text-white transition">Documentación</a>
-            <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded-full hover:bg-blue-500 transition">Descargar</a>
+            <a href="#" class="hover:text-white transition">Features</a>
+            <a href="#" class="hover:text-white transition">Docs</a>
+            <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded-full hover:bg-blue-500 transition">Download</a>
         </div>
     </nav>
 
