--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="#" class="hover:text-white transition">Inicio</a>
             <a href="#" class="hover:text-white transition">Features</a>
             <a href="#" class="hover:text-white transition">Docs</a>
-            <a href="#" class="bg-blue-600 text-white px-5 py-2 rounded-full hover:bg-blue-500 transition">Download</a>
+            <a href="https://github.com/TU_USUARIO/TU_REPO/archive/refs/heads/main.zip" class="bg-blue-600 text-white px-5 py-2 rounded-full hover:bg-blue-500 transition">Download</a>
         </div>
     </nav>
 
@@ -62,12 +62,13 @@
         </p>
         
         <div class="flex justify-center gap-4">
-            <button class="bg-white text-black font-bold py-4 px-10 rounded-2xl hover:scale-105 transition-transform">
-                Obtener TuDistro
-            </button>
-            <button class="glass py-4 px-10 rounded-2xl hover:bg-white/10 transition">
+            <a href="https://github.com/TU_USUARIO/TU_REPO/archive/refs/heads/main.zip" class="bg-white text-black font-bold py-4 px-10 rounded-2xl hover:scale-105 transition-transform inline-block">
+                Obtener KyntraOS
+            </a>
+            
+            <a href="https://github.com/TU_USUARIO/TU_REPO" target="_blank" class="glass py-4 px-10 rounded-2xl hover:bg-white/10 transition inline-block font-bold text-white">
                 Ver el Código
-            </button>
+            </a>
         </div>
 
         <div class="mt-20 glass p-4 rotate-x-12 transform perspective-1000 shadow-2xl">
