--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 
     <main class="max-w-7xl mx-auto px-10 pt-20 pb-32 text-center">
         <h1 class="text-6xl md:text-8xl font-extrabold mb-6 tracking-tight">
-            Diseñada para el <br> <span class="gradient-text">Máximo Rendimiento</span>
+            made for pepole <br> <span class="gradient-text">with toasters</span>
         </h1>
         <p class="text-gray-400 text-xl max-w-2xl mx-auto mb-10">
-            Elimina el bloatware, reduce la latencia y toma el control total de tu hardware con una base optimizada para gaming y productividad.
+            Based in Arch, that means you can select anything you want
         </p>
         
         <div class="flex justify-center gap-4">
             <a href="https://github.com/TU_USUARIO/TU_REPO/archive/refs/heads/main.zip" class="bg-white text-black font-bold py-4 px-10 rounded-2xl hover:scale-105 transition-transform inline-block">
-                Obtener KyntraOS
+                Obtain KyntraOS
             </a>
             
             <a href="https://github.com/TU_USUARIO/TU_REPO" target="_blank" class="glass py-4 px-10 rounded-2xl hover:bg-white/10 transition inline-block font-bold text-white">
-                Ver el Código
+                Contact
             </a>
         </div>
 
@@ -83,16 +83,16 @@
             <div class="w-12 h-12 bg-blue-500/20 rounded-lg mb-6 flex items-center justify-center">
                 <svg class="w-6 h-6 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M13 10V3L4 14h7v7l9-11h-7z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
             </div>
-            <h3 class="text-xl font-bold mb-3">Latencia Cero</h3>
-            <p class="text-gray-400">Optimización del kernel para una respuesta inmediata en entornos competitivos.</p>
+            <h3 class="text-xl font-bold mb-3">made by pepole that want power ⚡⚡</h3>
+            <p class="text-gray-400">"DE's" ultra optimized for less consume of ram ⚡.</p>
         </div>
 
         <div class="glass p-8">
             <div class="w-12 h-12 bg-purple-500/20 rounded-lg mb-6 flex items-center justify-center">
                 <svg class="w-6 h-6 text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
             </div>
-            <h3 class="text-xl font-bold mb-3">Privacidad Total</h3>
-            <p class="text-gray-400">Sin telemetría, sin rastreadores. Tus datos permanecen en tu máquina.</p>
+            <h3 class="text-xl font-bold mb-3">Less bloatware</h3>
+            <p class="text-gray-400">Bloatware, anything wants that. In kyntraos we reduced the useless apps.</p>
         </div>
 
         <div class="glass p-8">
@@ -100,7 +100,7 @@
                 <svg class="w-6 h-6 text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0 2.21 3.582 4 8 4s8-1.79 8-4M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4m0 5c0 2.21-3.582 4-8 4s-8-1.79-8-4" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/></svg>
             </div>
             <h3 class="text-xl font-bold mb-3">Open Source</h3>
-            <p class="text-gray-400">Transparencia completa. Auditable y mantenido por la comunidad.</p>
+            <p class="text-gray-400">Contact us for the code!!!!.</p>
         </div>
     </section>
 
