--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="text-2xl font-bold tracking-tighter">Ky<span class="gradient-text">ntraOS</span></div>
         <div class="space-x-8 text-sm font-medium text-gray-400">
             <a href="#" class="hover:text-white transition">Inicio</a>
-            <a href="#" class="hover:text-white transition">Features</a>
+            <a href="https://github.com/greatmacaw/kyntraos/features.html" class="hover:text-white transition">Features</a>
             <a href="#" class="hover:text-white transition">Docs</a>
             <a href="https://github.com/TU_USUARIO/TU_REPO/archive/refs/heads/main.zip" class="bg-blue-600 text-white px-5 py-2 rounded-full hover:bg-blue-500 transition">Download</a>
         </div>
